bug fixed on list drop down that was not showing the correct first capatilized letter of the list title.

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     margin: 0%;
+    color: white;
 }
 
 form {
